syntax = "proto3";

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";
option csharp_namespace = "ApiGateway.Protos";

message ProductCategoryDto{
	int32 id= 1;
	string categoryName = 2;
}

message ProductCategoryCreateRequest{ //send DTO in response | Use for update request also
	int32 userId = 1;
	ProductCategoryDto dto = 2;
}

message ProductCategoryCreateResponse{
	int32 status = 1;
	string errorMessage = 2;
	ProductCategoryDto dto = 3;
}

message ProductCategoryDeleteRequest{
	int32 id= 1;
	int32 userid = 2;
}

message ProductCategorySingleRequest{ //send DTO as Response
	int32 id = 1;
}

message ProductCategoryMultipleResponse{
	repeated ProductCategoryDto dtos = 1;
}

service ProductCategory {
  rpc CreateCategory (ProductCategoryCreateRequest) returns (ProductCategoryCreateResponse);
  rpc GetCategoryById (ProductCategorySingleRequest) returns (ProductCategoryDto);
  rpc GetAllCategories (google.protobuf.Empty) returns (ProductCategoryMultipleResponse);
  rpc UpdateCategory (ProductCategoryCreateRequest) returns (ProductCategoryCreateResponse);
  rpc DeleteCategory (ProductCategoryDeleteRequest) returns (ProductCategoryCreateResponse);
}

