syntax = "proto3";

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";
option csharp_namespace = "ProductServiceGrpc";

// Message Definitions
message SellerRequest {
  int32 id = 1;
}

message SellerCreateRequest {
  string companyName = 1;
  string address = 2;
  string mobileNo = 3;
  string email = 4;
  double rating = 5;
  int32 createdBy = 6;
}

message SellerUpdateRequest {
  int32 id = 1;
  string companyName = 2;
  string address = 3;
  string mobileNo = 4;
  string email = 5;
  double rating = 6;
  int32 modifiedBy = 7;
}

message SellerDeleteRequest {
  int32 id = 1;
  int32 modifiedBy = 2;
}

message SellerResponse {
  int32 id = 1;
  string companyName = 2;
  string address = 3;
  string mobileNo = 4;
  string email = 5;
  double rating = 6;
  int32 createdBy = 7;
  google.protobuf.Timestamp createdDate = 8;
  google.protobuf.Timestamp modifiedDate = 9;
  int32 modifiedBy = 10;
  bool isDeleted = 11;
}

message SellerListResponse {
  repeated SellerResponse sellers = 1;
}

// Service Definition
service SellerService {
  rpc CreateSeller (SellerCreateRequest) returns (SellerResponse);
  rpc GetSellerById (SellerRequest) returns (SellerResponse);
  rpc GetAllSellers (google.protobuf.Empty) returns (SellerListResponse);
  rpc UpdateSeller (SellerUpdateRequest) returns (SellerResponse);
  rpc DeleteSeller (SellerDeleteRequest) returns (google.protobuf.Empty);
}

